syntax = "proto3";

package streamingServices;
option go_package = "/streamingServices";

service AudioService {
  rpc GetStreamingSong(SongRequest) returns (stream SongPacket);
}

message SongRequest {
  string title = 1; 
  string format = 2;
}

message SongPacket {
  bytes data = 1;
}